<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tekstPitanja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_weight="1"
        android:layout_marginStart="10dp"
        android:text="TextView"
        android:textSize="28dp" />

    <ListView
        android:id="@+id/odgovoriLista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tekstPitanja"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:layout_above="@id/dugmeZaustavi"/>

    <Button
        android:id="@+id/dugmeZaustavi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:text="Zaustavi" />

</RelativeLayout>